# iji-rs

./: Cargo.toml  README.md
debug-static/: index.html  package.json
debug-static/lib/: app.css  app.mjs  gml.mjs  json.mjs  libs.mjs  state.d.ts  tabs.mjs
debug-static/lib/tab/: room.mjs
examples/: dump-gml.rs  gml-defs.rs
gmk-file/: Cargo.toml
gmk-file/examples/: all-events-ids.rs  images.rs  res-tree.rs
gmk-file/src/: lib.rs  settings.rs
gml/: Cargo.toml
gml/src/: ast.rs  eval.rs  gml.pest  lib.rs  parse.rs
gml/src/ast/: assign.rs  expr.rs  pos.rs  script.rs  stmt.rs  var.rs  visitor.rs
src/: assets.rs  gml.pest  gml.rs  index.html  main.rs  scripts.rs  state.rs
src/assets/: background.rs  imp.rs  sprite.rs
src/state/: global.rs  instance.rs  room.rs
src/state/global/: fonts.rs  objects.rs
