[package]
name = "iji-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.38"
pest = "2.5.5"
pest_derive = "2.5.5"
gmk-file = { path = "gmk-file" }

[profile.dev.package."*"]
opt-level = 1

[workspace]
members = ["gmk-file"]