[package]
name = "iji-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gml = { path = "gml" }
gmk-file = { path = "gmk-file" }

anyhow = "1.0.69"
image = { version = "0.24.5", features = ["bmp"] }
macroquad = "0.3.25"
thiserror = "1.0.38"

[profile.dev.package."*"]
opt-level = 1

[workspace]
members = ["gmk-file", "gml"]