[package]
name = "gml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
pest = "2.5.5"
pest_derive = "2.5.5"
polonius_workaround = "0.1.0"
serde = { version = "1.0.152", features = ["derive"]}
thiserror = "1.0.38"
